<?xml version="1.0"?>
<package format="2">
  <name>mapping_msgs</name>
  <version>0.1.0</version>
  <description>The hypermap_msgs package</description>

  <maintainer email="tobias.zaenker@aalto.fi">Tobias Zaenker</maintainer>

  <license>BSD</license>

  <author >Tobias Zaenker</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <!--depend>nav_msgs</depend-->
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
